@@ -19,7 +19,7 @@ public class confirmSettings extends Activity{
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.confirm_settings);
-		Log.e("Loading Activity", "LauncherActivity");
+		Log.e("Loading Activity", "confirmSettings");
 		Trial.context = this;
 		Trial.loadSessions();
 		BenignNum = (TextView) findViewById(R.id.BenignNum);
@@ -33,13 +33,15 @@ public class confirmSettings extends Activity{
 		      bw.Control=data.getExtras().getInt("Control");
 		      bw.Benign=data.getExtras().getInt("Benign");
 		      bw.Malignant=data.getExtras().getInt("Malignant");
-		      BenignNum.setText(new Integer(bw.Benign).toString());
-		      ControlNum.setText(new Integer(bw.Control).toString());
-		      MalignantNum.setText(new Integer(bw.Malignant).toString());
+		      BenignNum.setText(Integer.valueOf(bw.Benign).toString());
+		      ControlNum.setText(Integer.valueOf(bw.Control).toString());
+		      MalignantNum.setText(Integer.valueOf(bw.Malignant).toString());
+		      Log.e("on create data:", Integer.valueOf(bw.Malignant).toString() + " " + Integer.valueOf(bw.Benign).toString() + " ");
 		}
 		else
 		{
 			bw = new BloodWheel();
+			Log.e("data", "data not received");
 		}
 	}
 	
@@ -49,43 +51,53 @@ public class confirmSettings extends Activity{
 	}
 	
 	@Override
-	public void onActivityResult(int requestCode, int resultCode, Intent data) {
+	public void onActivityResult(int requestCode, int resultCode, Intent data) {//If back on phone pressed, retrieve data for intent
 		super.onActivityResult(requestCode, resultCode, data);
 	    if (data==null)
 	    {
-	    	BenignNum.setText(new Integer(bw.Benign).toString());
-		    ControlNum.setText(new Integer(bw.Control).toString());
-		    MalignantNum.setText(new Integer(bw.Malignant).toString());
+	    	BenignNum.setText(Integer.valueOf(bw.Benign).toString());
+		    ControlNum.setText(Integer.valueOf(bw.Control).toString());
+		    MalignantNum.setText(Integer.valueOf(bw.Malignant).toString());
+		    BenignNum.setText(Integer.valueOf(bw.Benign).toString());
+		    ControlNum.setText(Integer.valueOf(bw.Control).toString());
+		    MalignantNum.setText(Integer.valueOf(bw.Malignant).toString());
 	    	Log.e("Loading Activity", "nulls datas...");
 	    }
 	    else if (data.hasExtra("Benign")) {
-	    	int benign = data.getExtras().getInt("Benign");
-	    	BenignNum.setText(new Integer(data.getExtras().getInt("Benign")).toString());
-		    ControlNum.setText(new Integer(data.getExtras().getInt("Control")).toString());
-		    MalignantNum.setText(new Integer(data.getExtras().getInt("Malignant")).toString());
+	    	bw.Control=data.getExtras().getInt("Control");
+		    bw.Benign=data.getExtras().getInt("Benign");
+		    bw.Malignant=data.getExtras().getInt("Malignant");
+	    	BenignNum.setText(Integer.valueOf(bw.Benign).toString());
+		    ControlNum.setText(Integer.valueOf(bw.Control).toString());
+		    MalignantNum.setText(Integer.valueOf(bw.Malignant).toString());
 	  	}
 	}
 	
+	@Override
+	public void finish(){//If back on phone pressed, store data for next intent
+		Intent i = new Intent();
+		i.putExtra("Benign", bw.Benign);
+		i.putExtra("Control", bw.Control);  
+		i.putExtra("Malignant", bw.Malignant); 
+		setResult(Activity.RESULT_OK, i);
+		super.finish();
+	}
+	
 	public void onConfirmButtonClick (View v) {
-		//setContentView(new WheelView(this));
 		Trial.getNewTrial();
 		Intent i = new Intent(this, TrialRunActivity.class);
 		i.putExtra("Benign", bw.Benign);
 		i.putExtra("Control", bw.Control);  
-		i.putExtra("Malignant", bw.Malignant); 
-		Log.e("benign",new Integer(bw.Benign).toString());
-		Log.e("control",new Integer(bw.Control).toString());
-		Log.e("malignant",new Integer(bw.Malignant).toString());
+		i.putExtra("Malignant", bw.Malignant);
 		startActivityForResult(i,ButtonClickActivity_ID);
 	}
 	
-	public void onEditDefaultButtonClick(View v) {
+	public void onChangeSettingsButtonClick(View v) {
 		Intent i = new Intent(this, EditDefaultActivityNew.class); 
 		i.putExtra("Benign", bw.Benign);
 		i.putExtra("Control", bw.Control);  
 		i.putExtra("Malignant", bw.Malignant); 
 		startActivityForResult(i, ButtonClickActivity_ID);
 	}
-	
 	
 }
